--- a/daw/fol/fol_Cinco.html
+++ b/daw/fol/fol_Cinco.html
@@ -121,7 +121,68 @@
             </div>
             <!--*********************************************************************-->
             <h3 class="subTitulo" id="subCinco">Análisis de los riesgos relativos a las condiciones de seguridad</h3>
-          
+            <p>Las condiciones de seguridad son los factores de riesgo que ocasionan la mayoría de los accidentes laborales.</p>
+            <h4 class="apartado">Los puestos de trabajo</h4>
+            <p>El <b>puesto de trabajo</b> es el área del centro de trabajo, esté edificado o no, en el que el trabajador permanece o al que, por motivo de trabajo, puede acceder. También las zonas de descanso, los lavabos, los comedores y los locales de primeros auxilios. </p>
+            <h4 class="apartado">Los equipos de trabajo</h4>
+            <p>Se entiende por <b>equipo de trabajo</b> cualquier máquina, aparato, instrumento o instalación utilizado para el desarrollo del trabajo.</p>
+            <ul>
+                <li>Órganos de acccionamiento visibles e identificables.</li>
+                <li>Puesta en funcionamiento únicamente de forma voluntaria.</li>
+                <li>Orden de detención prioritaria al resto.</li>
+                <li>Resguardos de seguridad o dispositivos de protección si los elementos móviles son peligrosos.</li>
+                <li>Advertencias y señalizaciones para garantizar la seguridad de los trabajadores.</li>
+            </ul>
+            <h4 class="apartado">Las instalaciones eléctricas</h4>
+            <p>Un riesgo eléctrico es la posibilidad de contacto, directo o indirecto, del cuerpo humano con la corriente eléctrica. Puede ser producido por:</p>
+            <ul>
+                <li><b>Contacto directo:</b> la persona en cuestión entra en contacto con una parte que se encuentra activa de la instalación.</li>
+                <li><b>Contacto indirecto:</b> la persona está en contacto con cualquier elemento que no forma parte del circuito eléctrico pero que ha adquirido tensión de forma accidental.</li>
+            </ul>
+            <p>Principales recomendaciones:</p>
+            <ul>
+                <li>Conservar los equipos eléctricos en buen estado.</li>
+                <li>No manipular, reparar o modificar equipos o instalaciones eléctricas.</li>
+                <li>Tener en cuenta las instrucciones de uso de los equipos o instalaciones eléctrica.</li>
+                <li>Señalizar correctamente las instalaicones y revisarlas periódicamente.</li>
+                <li>Aislar las partes activas, utilizar tensiones de seguirdad y separación de circuitos.</li>
+                <li>Formar al personal.</li>
+                <li>Disponer de un corte automático de aviso.</li>
+            </ul>
+            <h4 class="apartado">Los incendios</h4>
+            <p>Para que un incendio sea posible, se quieren cuatro elementos:</p>
+            <ul>
+                <li><b>Comburente:</b> se necesita un osidante para la combustión, como por ejemplo, el oxígeno del aire en el ambiente.</li>
+                <li><b>Combustible:</b> material líquido, gaseoso o sólido capaz de entrar en combustión tras calentarse mediante la reacción química que se produce ante un comburente.</li>
+                <li><b>Calor:</b> necesario para iniciar la combustión.</li>
+                <li><b>Reacción en cadena:</b> los tres elementos anteriores deben presentarse en las condiciones y proporciones adecuadas para producirse el incendio.</li>
+            </ul>
+            <p>La prevención y extinción del fuego se basa en romper este tetraedro. La <b>extinción</b> del fuego puede hacerse por:</p>
+            <ul>
+                <li><b>Segregación:</b> retirando el combustible o cortando el paso o interponiendo elementos incombustibles.</li>
+                <li><b>Sofocación:</b> excluyendo el oxígeno. Se debe eliminar el contacto combustible-aire.</li>
+                <li><b>Enfriamiento:</b> reduciendo la temperatura, por ejemplo, lanzando agua a las llamas.</li>
+                <li><b>Inhibición:</b> interrumpiendo la reacción en cadena, que es la función de los exteriores de polvo.</li>
+            </ul>
+            <p>Según el tipo de combustible:</p>
+            <ul>
+                <li><b>Clase A:</b> Fuego de materiales orgánicos sólidos inflamables que producen llamas y brasas.</li>
+                <li><b>Clase B:</b> Incendios que implican líquidos inflamables.</li>
+                <li><b>Clase C:</b> Son fuegos de gases, combustibles que, en condiciones normales de presión y temperatura, se encuentran en estado gaseoso.</li>
+                <li><b>Clase D:</b> Incendio en los que, metales combustibles.</li>
+                <li><b>Clase F:</b> Son fuegos derivados de combustibles utilizados para cocinar.</li>
+            </ul>
+            <p>Los <b>fuegos con presencia de electricidad actualmente no se consideran una clase específica de fuego porpque la electricidad no arde, sino los componentes bajo tensión.</b></p>
+            <p>Para extinguir incendios, el más conocido es el <b>extintor</b>, la sustancia extintora más eficaz dependerá del combustible:</p>
+            <ul>
+                <li>El <b>agua a chorro</b> está indicada para los fuegos de clase A, excepto para los fuegos con persistencia de electricidad.</li>
+                <li>El <b>agua pulverizada</b> es la más efectiva que la base de agua para los fuegos de clase A. También puede usarse en fuegos de clase B.</li>
+                <li>El <b>polvo seco</b> (compuesto de bicarbonatos y sulfatos) se emplea en los fuegos de clase B, C y fuegos con presencia de electricidad.</li>
+                <li>El <b>polvo polivalente</b> (compuesto de fosfatos monamónicos) se puede usar en los de clase A, B, C e incluso en los fuegos con presencia de eletricidad (Clase E) simpre que la tensión sea menor a 1000 voltios.</li>
+                <li>El <b>anhídrido carbónico</b> (CO<sub>2</sub>) es ideal para los fuegos con presencia de electricidad (clase E) aunque podría también usarse (con menos efectividad) en los fuegos de clase A y clase B.</li>
+                <li>El <b>polvo especial</b> está indicado exclusivamente para los incendios de clase D, ya que su composición y forma de actuación es específica para cada tipo de metal.</li>
+                <li>Para los fuegos clase F sería necesario un <b>agente extintor específico</b>, a base de acetato de potasio.</li>
+            </ul>
             <div class="menuOpcional">
                 <a href="../fol/indice_fol.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
@@ -129,7 +190,28 @@
             </div>
             <!--*********************************************************************-->
             <h3 class="subTitulo" id="subSeis">Análisis de los riesgos relativos a las condiciones ambientales</h3>
-          
+            <p>Este grupo está formado por factores de riesgo que derivan del entorno ambiental en el trabajo, podemos decir que es la causa de la mayoría de enfermedades profesionales.</p>
+            <h4 class="apartado">Factores derivados de los agentes físicos</h4>
+            <br><br><h3><b>Ruido</b></h3>
+            <p>Es cualquier sonido molesto y no deseado que pueda considerarse peligroso para la salud y que interfiera en la actividad humana. Es uno de los riesgos más comunes.</p>
+            <p>El límite que establece la normativa es de 87 decibelios durante ocho horas diarias, un ruido de corta duración no puede superar los 140 decibelios.</p>
+            <h3><b>Vibraciones</b></h3>
+            <p>Son movimientos que se transmiten al cuerpo humano por diversas estructuras sólidas como motores, vehículos de transporte o máquinas, capaces de producir un efecto nocivo o molestias.</p>
+            <h3><b>Iluminación</b></h3>
+            <p>Para poder desarrollar la actividad es necesario obtener el máximo confort visual.</p>
+            <h3><b>Temperatura</b></h3>
+            <p>Un ambiente térmico no adecuado puede causar distintos problemas médicos, incomodidad, transpiración o temblores.</p>
+            <p>Cuando los mecanismos de autorregulación no son suficientes para mantener constante la temperatura, se pueden dar situaciones que causan estrés térmico, golpes de calor, hipotermias, etcétera.</p>
+            <p>El confort térmico pasa por seis variables:</p>
+            <ul>
+                <li>Temperatura del aire.</li>
+                <li>Humedad del aire.</li>
+                <li>Temperatura de la pared y de los objetos del puesto de trabajo.</li>
+                <li>Velocidad del aire.</li>
+                <li>Actividad física.</li>
+                <li>Ropa de trabajo.</li>
+            </ul>
+            <h3><b>Radiaciones</b></h3>
             <div class="menuOpcional">
                 <a href="../fol/indice_fol.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
