--- a/daw/dwEntornoCliente/dwEC_Uno.html
+++ b/daw/dwEntornoCliente/dwEC_Uno.html
@@ -62,11 +62,10 @@
                 </tr>
                 <tr>
                     <td>Capa de estructura (DOM / estructura HTML)</td>
-                    <td>Contenido estructurado (documento HTML)</td>
+                    <td rowspan="2">Contenido estructurado (documento HTML)</td>
                 </tr>
                 <tr>
                     <td>Capa de contenido (Texto, imágenes, etc)</td>
-                    <td>Contenido estructurado (documento HTML)</td>
                 </tr>
             </table>
             <div class="menuOpcional">
