--- a/daw/fol/fol_Cinco.html
+++ b/daw/fol/fol_Cinco.html
@@ -29,7 +29,10 @@
             </ul>
             <p>Probabilidades de que ocurra un daño x Severidad del daño = Gravedad del riesgo</p>
             <table>
-                <tr><th>Consecuencias</th></tr>
+                <tr>
+                    <th></th>
+                    <th colspan="3">Consecuencias</th>
+                </tr>
                 <tr>
                     <th>Probabilidad</th>
                     <th>Ligeramente perjudicial</th>
