--- a/daw/fol/fol_Cinco.html
+++ b/daw/fol/fol_Cinco.html
@@ -29,34 +29,38 @@
             </ul>
             <p>Probabilidades de que ocurra un daño x Severidad del daño = Gravedad del riesgo</p>
             <table>
-                <tr>
-                    <th></th>
-                    <th colspan="3">Consecuencias</th>
-                </tr>
-                <tr>
-                    <th>Probabilidad</th>
-                    <th>Ligeramente perjudicial</th>
-                    <th>Perjudicial</th>
-                    <th>Extremadamente perjudicial</th>
-                </tr>
-                <tr>
-                    <th>Baja</th>
-                    <td>Poco riesgo</td>
-                    <td>Riesgo tolerable</td>
-                    <td>Riesgo moderado</td>
-                </tr>
-                <tr>
-                    <th>Media</th>
-                    <td>Riesgo tolerable</td>
-                    <td>Riesgo moderado</td>
-                    <td>Riesgo importante</td>
-                </tr>
-                <tr>
-                    <th>Alta</th>
-                    <td>Riesgo moderado</td>
-                    <td>Riesgo importante</td>
-                    <td>Riesgo intolerable</td>
-                </tr>
+                <thead>
+                    <tr>
+                        <th></th>
+                        <th colspan="3">Consecuencias</th>
+                    </tr>
+                    <tr>
+                        <th>Probabilidad</th>
+                        <th>Ligeramente perjudicial</th>
+                        <th>Perjudicial</th>
+                        <th>Extremadamente perjudicial</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Baja</th>
+                        <td>Poco riesgo</td>
+                        <td>Riesgo tolerable</td>
+                        <td>Riesgo moderado</td>
+                    </tr>
+                    <tr>
+                        <th>Media</th>
+                        <td>Riesgo tolerable</td>
+                        <td>Riesgo moderado</td>
+                        <td>Riesgo importante</td>
+                    </tr>
+                    <tr>
+                        <th>Alta</th>
+                        <td>Riesgo moderado</td>
+                        <td>Riesgo importante</td>
+                        <td>Riesgo intolerable</td>
+                    </tr>
+                </tbody>
             </table>
             <!--*********************************************************************-->
             <h3 class="subTitulo" id="subDos">La importancia de la cultura preventiva en todas las fases de la actividad profesional</h3>
